[tool.poetry]
name = "autosig"
version = "0.8.0"
description = "Define signatures to create beautiful APIs"
authors = ["Antonio Piccolboni <antonio@piccolboni.info>"]
license="GNU General Public License v3"
readme = "README.rst"
repository="https://github.com/piccolbo/autosig"
documentation="https://autosig.readthedocs.io/en/latest/"
classifiers=[
      "Development Status :: 2 - Pre-Alpha",
      "Intended Audience :: Developers",
      "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
      "Natural Language :: English",
      "Programming Language :: Python :: 3.5",
      "Programming Language :: Python :: 3.6",
  ]

[tool.poetry.dependencies]
python = "^3.5"
attrs = ">=18.2.0"
toolz = ">=0.9.0"


[tool.poetry.dev-dependencies]
hypothesis = ">=3.69.9"
pytest = ">=3.7.3"
pytest-cov = ">=2.6.0"
twine = ">=1.11.0"
Sphinx = ">=1.7.8"
sphinx-rtd-theme = "*"
recommonmark = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
