[tool.poetry]
authors = ["Antonio Piccolboni <antonio@piccolboni.info>"]
description = "Define signatures to create beautiful APIs"
documentation="https://autosig.readthedocs.io/en/latest/"
license="GPL-3.0"
name = "autosig"
readme = "README.rst"
repository="https://github.com/piccolbo/autosig"
version = "0.9.2"
classifiers=[
      "Development Status :: 4 - Beta",
      "Intended Audience :: Developers",
  ]

[tool.poetry.dependencies]
attrs = ">=18.2.0"
python = "^3.5"
toolz = ">=0.9.0"


[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"
hypothesis = ">=3.69.9"
pytest = ">=3.7.3"
pytest-cov = ">=2.6.0"
recommonmark = "*"
Sphinx = ">=1.7.8"
sphinx-rtd-theme = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
